--- a/index.html
+++ b/index.html
@@ -151,13 +151,16 @@ Diff[5] = function()
 </SCRIPT> 
 		  <P>Time to generate puzzle:
 			 <INPUT TYPE="TEXT" NAME="TimeToTry" VALUE="5" SIZE="4" ID="TimeToTry"></P> 
-		  <P>XW: <INPUT TYPE="CHECKBOX" NAME="XW" VALUE="1" ID="XW"> IR:
+		  <P><A
+			 HREF="https://www.emogic.com/notes/programming_sudoku_algorithm_part_3_seven_basic_ways_solving_sudoku_stratagies"
+			 TARGET="_blank">Solving metods</A>: XW:
+			 <INPUT TYPE="CHECKBOX" NAME="XW" VALUE="1" ID="XW"> IR:
 			 <INPUT TYPE="CHECKBOX" NAME="IR" ID="IR" VALUE="1"> NP:
 			 <INPUT TYPE="CHECKBOX" NAME="NP" CHECKED="CHECKED" ID="NP" VALUE="1"> HS:
 			 <INPUT TYPE="CHECKBOX" NAME="HS" CHECKED="CHECKED" ID="HS" VALUE="1"></P> 
 		  <P>Number of Blank Squares:<INPUT TYPE="TEXT" NAME="NumberOfSquares"
-			 VALUE="58" SIZE="4" ID="NumberOfSquares"><BR>(55 is average. Higher numbers may
-			 not be reached.)</P> 
+			 VALUE="58" SIZE="4" ID="NumberOfSquares"><BR>(55 is average. Higher numbers
+			 might not be reached.)</P> 
 		  <P><INPUT TYPE="SUBMIT" NAME="Submit1"
 			 VALUE="Generate Puzzle - Please wait"></P> 
 								
