--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ z-index: 999;
 	 <LINK REL="stylesheet" HREF="/cgi/sudoku/jqueryui/jquery-ui.css"> <SCRIPT SRC="/cgi/sudoku/jquery/jquery.js"></SCRIPT> <SCRIPT
 	 SRC="/cgi/sudoku/jqueryui/jquery-ui.js"></SCRIPT> <SCRIPT SRC="/cgi/sudoku/cookie.js"></SCRIPT> 
   </HEAD> 
-  <BODY BACKGROUND="_sudoku.gif"> <SCRIPT TYPE="text/javascript"> 		
+  <BODY BACKGROUND="/cgi/sudoku/images/sudoku.gif"> <SCRIPT TYPE="text/javascript"> 		
 
 var browserType;
 if (document.layers) {browserType = "nn4";}
